Catalog2/grammar/Catalog2Parser.java
// Generated from Catalog2.g4 by ANTLR 4.5.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Catalog2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, PLUS=4, MINUS=5, MULT=6, DIV=7, ASSIGN=8, MOD=9, 
		SEMICOLON=10, LPAREN=11, RPAREN=12, LBRACE=13, RBRACE=14, PERIOD=15, COMMA=16, 
		COLON=17, EQUALS=18, NOTEQ=19, GT=20, LT=21, GTE=22, LTE=23, AND=24, OR=25, 
		TRUE=26, FALSE=27, EXCL=28, PRINT=29, IF=30, COPY=31, MOVE=32, DELETE=33, 
		FOR=34, ELSE=35, ELSEIF=36, IN=37, INSIDE=38, LETTER=39, DIGIT=40, NUMBER=41, 
		WORD=42, ID=43, STRING=44, WS=45, COMMENT=46;
	public static final int
		RULE_prog = 0, RULE_statement = 1, RULE_assignment = 2, RULE_control_flow = 3, 
		RULE_expression = 4;
	public static final String[] ruleNames = {
		"prog", "statement", "assignment", "control_flow", "expression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'sort'", "'1'", "'-1'", "'+'", "'-'", "'*'", "'/'", "'='", "'%'", 
		"';'", "'('", "')'", "'{'", "'}'", "'.'", "','", "':'", "'=='", "'!='", 
		"'>'", "'<'", "'>='", "'<='", "'&&'", "'||'", "'true'", "'false'", "'!'", 
		"'print'", "'if'", "'cp'", "'mv'", "'del'", "'foreach'", "'else'", "'elseif'", 
		"'in'", "'inside'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, "PLUS", "MINUS", "MULT", "DIV", "ASSIGN", "MOD", 
		"SEMICOLON", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "PERIOD", "COMMA", 
		"COLON", "EQUALS", "NOTEQ", "GT", "LT", "GTE", "LTE", "AND", "OR", "TRUE", 
		"FALSE", "EXCL", "PRINT", "IF", "COPY", "MOVE", "DELETE", "FOR", "ELSE", 
		"ELSEIF", "IN", "INSIDE", "LETTER", "DIGIT", "NUMBER", "WORD", "ID", "STRING", 
		"WS", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Catalog2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Catalog2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public List<Control_flowContext> control_flow() {
			return getRuleContexts(Control_flowContext.class);
		}
		public Control_flowContext control_flow(int i) {
			return getRuleContext(Control_flowContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Catalog2Visitor ) return ((Catalog2Visitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(15);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << IF) | (1L << COPY) | (1L << MOVE) | (1L << DELETE) | (1L << FOR) | (1L << ID))) != 0)) {
				{
				setState(13);
				switch (_input.LA(1)) {
				case PRINT:
				case COPY:
				case MOVE:
				case DELETE:
					{
					setState(10);
					statement();
					}
					break;
				case ID:
					{
					setState(11);
					assignment();
					}
					break;
				case IF:
				case FOR:
					{
					setState(12);
					control_flow();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(17);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PrintStatementContext extends StatementContext {
		public ExpressionContext VAR;
		public TerminalNode PRINT() { return getToken(Catalog2Parser.PRINT, 0); }
		public TerminalNode LPAREN() { return getToken(Catalog2Parser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(Catalog2Parser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(Catalog2Parser.SEMICOLON, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PrintStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Catalog2Visitor ) return ((Catalog2Visitor<? extends T>)visitor).visitPrintStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeleteStatementContext extends StatementContext {
		public TerminalNode DELETE() { return getToken(Catalog2Parser.DELETE, 0); }
		public TerminalNode LPAREN() { return getToken(Catalog2Parser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(Catalog2Parser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(Catalog2Parser.SEMICOLON, 0); }
		public DeleteStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Catalog2Visitor ) return ((Catalog2Visitor<? extends T>)visitor).visitDeleteStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MoveStatementContext extends StatementContext {
		public TerminalNode MOVE() { return getToken(Catalog2Parser.MOVE, 0); }
		public TerminalNode LPAREN() { return getToken(Catalog2Parser.LPAREN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode COMMA() { return getToken(Catalog2Parser.COMMA, 0); }
		public TerminalNode RPAREN() { return getToken(Catalog2Parser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(Catalog2Parser.SEMICOLON, 0); }
		public MoveStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Catalog2Visitor ) return ((Catalog2Visitor<? extends T>)visitor).visitMoveStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CopyStatementContext extends StatementContext {
		public TerminalNode COPY() { return getToken(Catalog2Parser.COPY, 0); }
		public TerminalNode LPAREN() { return getToken(Catalog2Parser.LPAREN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode COMMA() { return getToken(Catalog2Parser.COMMA, 0); }
		public TerminalNode RPAREN() { return getToken(Catalog2Parser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(Catalog2Parser.SEMICOLON, 0); }
		public CopyStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Catalog2Visitor ) return ((Catalog2Visitor<? extends T>)visitor).visitCopyStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(46);
			switch (_input.LA(1)) {
			case PRINT:
				_localctx = new PrintStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(18);
				match(PRINT);
				setState(19);
				match(LPAREN);
				setState(20);
				((PrintStatementContext)_localctx).VAR = expression(0);
				setState(21);
				match(RPAREN);
				setState(22);
				match(SEMICOLON);
				}
				break;
			case COPY:
				_localctx = new CopyStatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(24);
				match(COPY);
				setState(25);
				match(LPAREN);
				setState(26);
				expression(0);
				setState(27);
				match(COMMA);
				setState(28);
				expression(0);
				setState(29);
				match(RPAREN);
				setState(30);
				match(SEMICOLON);
				}
				break;
			case MOVE:
				_localctx = new MoveStatementContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(32);
				match(MOVE);
				setState(33);
				match(LPAREN);
				setState(34);
				expression(0);
				setState(35);
				match(COMMA);
				setState(36);
				expression(0);
				setState(37);
				match(RPAREN);
				setState(38);
				match(SEMICOLON);
				}
				break;
			case DELETE:
				_localctx = new DeleteStatementContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(40);
				match(DELETE);
				setState(41);
				match(LPAREN);
				setState(42);
				expression(0);
				setState(43);
				match(RPAREN);
				setState(44);
				match(SEMICOLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	 
		public AssignmentContext() { }
		public void copyFrom(AssignmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssignContext extends AssignmentContext {
		public TerminalNode ID() { return getToken(Catalog2Parser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(Catalog2Parser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(Catalog2Parser.SEMICOLON, 0); }
		public AssignContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Catalog2Visitor ) return ((Catalog2Visitor<? extends T>)visitor).visitAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignment);
		try {
			_localctx = new AssignContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(ID);
			setState(49);
			match(ASSIGN);
			setState(50);
			expression(0);
			setState(51);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Control_flowContext extends ParserRuleContext {
		public Control_flowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_control_flow; }
	 
		public Control_flowContext() { }
		public void copyFrom(Control_flowContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ForCycleContext extends Control_flowContext {
		public TerminalNode FOR() { return getToken(Catalog2Parser.FOR, 0); }
		public List<TerminalNode> LPAREN() { return getTokens(Catalog2Parser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(Catalog2Parser.LPAREN, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(Catalog2Parser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(Catalog2Parser.RPAREN, i);
		}
		public TerminalNode LBRACE() { return getToken(Catalog2Parser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(Catalog2Parser.RBRACE, 0); }
		public TerminalNode IN() { return getToken(Catalog2Parser.IN, 0); }
		public TerminalNode INSIDE() { return getToken(Catalog2Parser.INSIDE, 0); }
		public TerminalNode COLON() { return getToken(Catalog2Parser.COLON, 0); }
		public TerminalNode ID() { return getToken(Catalog2Parser.ID, 0); }
		public TerminalNode COMMA() { return getToken(Catalog2Parser.COMMA, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<Control_flowContext> control_flow() {
			return getRuleContexts(Control_flowContext.class);
		}
		public Control_flowContext control_flow(int i) {
			return getRuleContext(Control_flowContext.class,i);
		}
		public ForCycleContext(Control_flowContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Catalog2Visitor ) return ((Catalog2Visitor<? extends T>)visitor).visitForCycle(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfConditionContext extends Control_flowContext {
		public TerminalNode IF() { return getToken(Catalog2Parser.IF, 0); }
		public List<TerminalNode> LPAREN() { return getTokens(Catalog2Parser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(Catalog2Parser.LPAREN, i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(Catalog2Parser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(Catalog2Parser.RPAREN, i);
		}
		public List<TerminalNode> LBRACE() { return getTokens(Catalog2Parser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(Catalog2Parser.LBRACE, i);
		}
		public List<TerminalNode> RBRACE() { return getTokens(Catalog2Parser.RBRACE); }
		public TerminalNode RBRACE(int i) {
			return getToken(Catalog2Parser.RBRACE, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<Control_flowContext> control_flow() {
			return getRuleContexts(Control_flowContext.class);
		}
		public Control_flowContext control_flow(int i) {
			return getRuleContext(Control_flowContext.class,i);
		}
		public List<TerminalNode> ELSE() { return getTokens(Catalog2Parser.ELSE); }
		public TerminalNode ELSE(int i) {
			return getToken(Catalog2Parser.ELSE, i);
		}
		public List<TerminalNode> ELSEIF() { return getTokens(Catalog2Parser.ELSEIF); }
		public TerminalNode ELSEIF(int i) {
			return getToken(Catalog2Parser.ELSEIF, i);
		}
		public IfConditionContext(Control_flowContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Catalog2Visitor ) return ((Catalog2Visitor<? extends T>)visitor).visitIfCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Control_flowContext control_flow() throws RecognitionException {
		Control_flowContext _localctx = new Control_flowContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_control_flow);
		int _la;
		try {
			setState(125);
			switch (_input.LA(1)) {
			case IF:
				_localctx = new IfConditionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(53);
				match(IF);
				setState(54);
				match(LPAREN);
				{
				setState(55);
				expression(0);
				}
				setState(56);
				match(RPAREN);
				setState(57);
				match(LBRACE);
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << IF) | (1L << COPY) | (1L << MOVE) | (1L << DELETE) | (1L << FOR))) != 0)) {
					{
					setState(60);
					switch (_input.LA(1)) {
					case PRINT:
					case COPY:
					case MOVE:
					case DELETE:
						{
						setState(58);
						statement();
						}
						break;
					case IF:
					case FOR:
						{
						setState(59);
						control_flow();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(64);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(65);
				match(RBRACE);
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ELSE) {
					{
					{
					setState(66);
					match(ELSE);
					setState(67);
					match(LBRACE);
					setState(72);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << IF) | (1L << COPY) | (1L << MOVE) | (1L << DELETE) | (1L << FOR))) != 0)) {
						{
						setState(70);
						switch (_input.LA(1)) {
						case PRINT:
						case COPY:
						case MOVE:
						case DELETE:
							{
							setState(68);
							statement();
							}
							break;
						case IF:
						case FOR:
							{
							setState(69);
							control_flow();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						setState(74);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(75);
					match(RBRACE);
					}
					}
					setState(80);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ELSEIF) {
					{
					{
					setState(81);
					match(ELSEIF);
					setState(82);
					match(LPAREN);
					{
					setState(83);
					expression(0);
					}
					setState(84);
					match(RPAREN);
					setState(85);
					match(LBRACE);
					setState(90);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << IF) | (1L << COPY) | (1L << MOVE) | (1L << DELETE) | (1L << FOR))) != 0)) {
						{
						setState(88);
						switch (_input.LA(1)) {
						case PRINT:
						case COPY:
						case MOVE:
						case DELETE:
							{
							setState(86);
							statement();
							}
							break;
						case IF:
						case FOR:
							{
							setState(87);
							control_flow();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						setState(92);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(93);
					match(RBRACE);
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case FOR:
				_localctx = new ForCycleContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				match(FOR);
				setState(101);
				match(LPAREN);
				setState(102);
				expression(0);
				setState(103);
				_la = _input.LA(1);
				if ( !(_la==IN || _la==INSIDE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(104);
				expression(0);
				setState(112);
				_la = _input.LA(1);
				if (_la==COLON) {
					{
					setState(105);
					match(COLON);
					setState(106);
					match(T__0);
					setState(107);
					match(LPAREN);
					setState(108);
					match(ID);
					setState(109);
					match(COMMA);
					setState(110);
					_la = _input.LA(1);
					if ( !(_la==T__1 || _la==T__2) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					setState(111);
					match(RPAREN);
					}
				}

				setState(114);
				match(RPAREN);
				setState(115);
				match(LBRACE);
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << IF) | (1L << COPY) | (1L << MOVE) | (1L << DELETE) | (1L << FOR))) != 0)) {
					{
					setState(118);
					switch (_input.LA(1)) {
					case PRINT:
					case COPY:
					case MOVE:
					case DELETE:
						{
						setState(116);
						statement();
						}
						break;
					case IF:
					case FOR:
						{
						setState(117);
						control_flow();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(122);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(123);
				match(RBRACE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NegationContext extends ExpressionContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode EXCL() { return getToken(Catalog2Parser.EXCL, 0); }
		public NegationContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Catalog2Visitor ) return ((Catalog2Visitor<? extends T>)visitor).visitNegation(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PlusMinusContext extends ExpressionContext {
		public Token VAR;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode PLUS() { return getToken(Catalog2Parser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(Catalog2Parser.MINUS, 0); }
		public PlusMinusContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Catalog2Visitor ) return ((Catalog2Visitor<? extends T>)visitor).visitPlusMinus(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ComparisonContext extends ExpressionContext {
		public Token VAR;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode EQUALS() { return getToken(Catalog2Parser.EQUALS, 0); }
		public TerminalNode NOTEQ() { return getToken(Catalog2Parser.NOTEQ, 0); }
		public TerminalNode GT() { return getToken(Catalog2Parser.GT, 0); }
		public TerminalNode LT() { return getToken(Catalog2Parser.LT, 0); }
		public TerminalNode GTE() { return getToken(Catalog2Parser.GTE, 0); }
		public TerminalNode LTE() { return getToken(Catalog2Parser.LTE, 0); }
		public ComparisonContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Catalog2Visitor ) return ((Catalog2Visitor<? extends T>)visitor).visitComparison(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MultDivModContext extends ExpressionContext {
		public Token VAR;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode MULT() { return getToken(Catalog2Parser.MULT, 0); }
		public TerminalNode DIV() { return getToken(Catalog2Parser.DIV, 0); }
		public TerminalNode MOD() { return getToken(Catalog2Parser.MOD, 0); }
		public MultDivModContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Catalog2Visitor ) return ((Catalog2Visitor<? extends T>)visitor).visitMultDivMod(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StringDotIdContext extends ExpressionContext {
		public TerminalNode STRING() { return getToken(Catalog2Parser.STRING, 0); }
		public TerminalNode PERIOD() { return getToken(Catalog2Parser.PERIOD, 0); }
		public TerminalNode ID() { return getToken(Catalog2Parser.ID, 0); }
		public StringDotIdContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Catalog2Visitor ) return ((Catalog2Visitor<? extends T>)visitor).visitStringDotId(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParenExpressionContext extends ExpressionContext {
		public TerminalNode LPAREN() { return getToken(Catalog2Parser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(Catalog2Parser.RPAREN, 0); }
		public ParenExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Catalog2Visitor ) return ((Catalog2Visitor<? extends T>)visitor).visitParenExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AndOperatorContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode AND() { return getToken(Catalog2Parser.AND, 0); }
		public AndOperatorContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Catalog2Visitor ) return ((Catalog2Visitor<? extends T>)visitor).visitAndOperator(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OrOperatorContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode OR() { return getToken(Catalog2Parser.OR, 0); }
		public OrOperatorContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Catalog2Visitor ) return ((Catalog2Visitor<? extends T>)visitor).visitOrOperator(this);
